<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.singleCharacter.SingleCharacterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:titleTextColor="@color/white" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_container"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/container_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/currentCharacterIcon"
                android:layout_width="@dimen/large_size_circle_image"
                android:layout_height="@dimen/large_size_circle_image"
                android:layout_margin="@dimen/app_margin"
                android:src="@drawable/user"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/currentCharacterName"
                style="@style/title_text_style"
                android:textColor="@color/white"
                android:maxWidth="@dimen/max_width"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/currentCharacterIcon"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/name" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_margin"
            android:background="@color/lightGrey"
            app:cardElevation="0dp"
            app:cardCornerRadius="@dimen/container_corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_container">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/lightGrey">

                <TextView
                    android:id="@+id/label_species"
                    style="@style/big_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/app_margin"
                    android:text="@string/species"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:id="@+id/species"
                    style="@style/big_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/species"
                    app:layout_constraintStart_toEndOf="@id/label_species"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:id="@+id/label_gender"
                    style="@style/big_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/app_margin"
                    android:text="@string/gender"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/label_species"/>
                <TextView
                    android:id="@+id/gender"
                    style="@style/big_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/gender"
                    app:layout_constraintStart_toEndOf="@id/label_gender"
                    app:layout_constraintTop_toBottomOf="@id/label_species"/>
                <TextView
                    android:id="@+id/label_status"
                    style="@style/big_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/app_margin"
                    android:text="@string/status"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/gender"/>
                <TextView
                    android:id="@+id/status"
                    style="@style/big_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/status"
                    app:layout_constraintStart_toEndOf="@id/label_status"
                    app:layout_constraintTop_toBottomOf="@id/gender"/>
                <TextView
                    android:id="@+id/label_location"
                    style="@style/big_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/app_margin"
                    android:text="@string/location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/label_status"/>
                <TextView
                    android:id="@+id/location"
                    style="@style/big_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/location"
                    android:maxWidth="@dimen/max_width"
                    app:layout_constraintStart_toEndOf="@id/label_location"
                    app:layout_constraintTop_toBottomOf="@id/label_status"/>
                <TextView
                    android:id="@+id/label_episodes"
                    style="@style/big_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/app_margin"
                    android:text="@string/count_of_episodes"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/location"/>
                <TextView
                    android:id="@+id/episodes"
                    style="@style/big_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/count_of_episodes"
                    app:layout_constraintStart_toEndOf="@id/label_episodes"
                    app:layout_constraintTop_toBottomOf="@id/location"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>